--- a/style4.css
+++ b/style4.css
@@ -35,6 +35,7 @@
     display: flex;
     flex-direction: row;
     margin-top: 50px;
+    margin-bottom: 50px
 }
 .container-book {
     display: flex;
